--- a/TodoList-react/src/App.css
+++ b/TodoList-react/src/App.css
@@ -9,9 +9,9 @@
 }
 
 #appName {
-    /*color: #178AD6;*/
-    /*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
-    /*font-size: 60px;*/
+    color: #ffffff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -108,7 +108,7 @@ body {
     display: block;
     position: relative;
     top: 50px;
-    left: 50px;
+    left: 60px;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
@@ -148,14 +148,10 @@ body {
     height: 4px;
     margin-bottom: 5px;
     position: relative;
-
     background: #cdcdcd;
     border-radius: 3px;
-
     z-index: 1;
-
     transform-origin: 4px 0px;
-
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
     background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
     opacity 0.55s ease;
